# DnDArena

./: .gitignore  CMakeLists.txt  main.cpp
Resources/: ActionSurge.json  Barbarian5.json  Fighter5.json  Frenzy.json  Greatsword.json  GreatswordMultiAttack.json  Longsword.json  MultiAttack.json  Rage.json  SecondWind.json  UnarmedStrike.json
Resources/Actions/: ClassAbilities.json  MonsterAbilities.json  Spells.json  Weapons.json
Resources/StatBlocks/: Devils.json  MonsterManual.json  PremadeCharacters.json
Source/: Action.cpp  Action.h  Actor.cpp  Actor.h  Arena.cpp  Arena.h  Dice.cpp  Dice.h  Effect.cpp  Effect.h  Group.cpp  Group.h  ImportJson.cpp  ImportJson.h  Output.cpp  Output.h  Types.h  main.cpp
